fix path in gh pages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.0/d3.min.js"></script>
-    <script src="src/d3_timeseries.min.js"></script>
-    <link href="src/d3_timeseries.css" rel="stylesheet" type="text/css"></link>
+    <script src="dist/d3_timeseries.min.js"></script>
+    <link href="dist/d3_timeseries.min.css" rel="stylesheet" type="text/css"></link>
     <style>
     .gist{font-size:12px;line-height:16px;margin-bottom:0px;width:900px}
     .gist-meta{display:none;}
